made more modifications. will work on this more at a later time.

--- a/Flight-Management/Flight_Management/templates/searchFlight.html
+++ b/Flight-Management/Flight_Management/templates/searchFlight.html
@@ -17,4 +17,10 @@
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
 
+{% block scripts %}
+<script>
+    // this will be for the jquery search. figure out how to do this properly
+</script>
+{% endblock %}
+
 {% endblock %}
