--- a/Flight-Management/Flight_Management/static/content/site.css
+++ b/Flight-Management/Flight_Management/static/content/site.css
@@ -1,6 +1,8 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: lightgray;
+    text-align: center;
 }
 
 /* Set padding to keep content from hitting the edges */
